Display books in flexbox

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Html working good!</h1>
-        <p class="testing"></p>
+        <div class="bookshelf"></div>
         <script src="script.js"></script>
     </body>
 </html>
