Add form to add new book, remove button and read toggle

--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
     </head>
     <body>
         <h1>Html working good!</h1>
+        <form class="add-book">
+            <h2>Add new book</h2>
+            <div class="form-input">
+                <label>
+                    title:
+                    <input name="title" id="title" required>
+                </label>
+                <label>
+                    author:
+                    <input name="author" id="author" required>
+                </label>
+                <label>
+                    year:
+                    <input
+                        type="number"
+                        name="year"
+                        id="year"
+                        required
+                    >
+                </label>
+                <label>
+                    pages:
+                    <input
+                        type="number"
+                        name="pages"
+                        id="pages"
+                        required
+                    >
+                </label>
+                <label>
+                    read:
+                    <input type="checkbox" name="read" id="read">
+                </label>
+            </div>
+            <button type="submit" id="add-btn">Add to library</button>
+        </form>
         <div class="bookshelf"></div>
         <script src="script.js"></script>
     </body>
